updated files storage to s3 bucket

--- a/AuthenticationApp/templates/reset_password_email.html
+++ b/AuthenticationApp/templates/reset_password_email.html
@@ -1,5 +1,5 @@
 {% autoescape off %}
 Hi {{ user.first_name }} {{ user.middle_name }} {{ user.last_name }},
 Please click on the link to reset you password,
-http://{{ domain }}/reset_password/{{ uid }}/{{ token }}
+{{ domain }}/reset_password/{{ uid }}/{{ token }}
 {% endautoescape %}
